<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">承煌渠道系统</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="login_username">用户名</string>
    <string name="login_password">密     码</string>
    <string name="login_btn">登 陆</string>
    <string name="login_error_no_username">请输入用户名</string>
    <string name="login_error_no_password">请输入密码</string>
    <string name="login_error_wrong_info">错误的用户名/密码</string>
    <string name="login_error_request">服务器连接错误</string>
    <string name="login_error_init">首次登陆需要修改密码</string>
    <string name="login_warning">注意：\n使用此app时，请打开您手机的NFC扫描功能</string>
    
    <string name="init_password">请输入新密码</string>
    <string name="init_password_confirm">再次输入新密码</string>
    <string name="init_error_no_password">请输入密码</string>
    <string name="init_error_wrong_password">输入的密码不符合要求</string>
    <string name="init_error_unmatch_password">两次输入的密码不一致</string>
    <string name="init_warning">注意：\n初次登陆，请修改密码\n新密码必须由6位以上的数字、字母或符号组成</string>
    <string name="init_btn">确认</string>
    
    <string name="main_title_package">装箱</string>
    <string name="main_title_history">历史</string>
    <string name="main_title_delivery">发货</string>
    <string name="main_title_check">验货</string>
    
    <string name="fragment_step1">第一步</string>
    <string name="fragment_step2">第二步</string>
    <string name="fragment_step3">第三步</string>
    <string name="fragment_next">下一步</string>
    <string name="fragment_search">检索</string>
    <string name="fragment_scan">已扫描</string>
    <string name="fragment_unscan">未扫描</string>
    <string name="fragment_scan_success">验证成功</string>
    <string name="fragment_scan_fail">验证失败</string>
    <string name="fragment_commit">提交装箱信息</string>
    <string name="fragment_commit_del">提交发货信息</string>
    <string name="fragment_commit_detail">查看详情</string>
    
    <string name="fragment_pkg_step1">请选择装箱商品</string>
    <string name="fragment_pkg_step2">“XX”商品\n每箱需装AA盒\n请继续扫描商品盒NFC标签\n重复盒子不会累计</string>
    <string name="fragment_pkg_step3">你已扫描了AA盒XX\n请继续扫描包装大箱NFC标签</string>
    
    <string name="fragment_del_step1">请检索收货人</string>
    <string name="fragment_del_step1_search_condition">检索类型</string>
    <string name="fragment_del_step1_search_content">检索内容</string>
    <string name="fragment_del_step1_checkbox">发货给消费者</string>
    <string name="fragment_del_step1_normal_level">收货人级别</string>
    <string name="fragment_del_step1_normal_name">收货人名称</string>
    <string name="fragment_del_step1_senior_name1">省级代理名称</string>
    <string name="fragment_del_step1_senior_name2">一级代理名称</string>
    <string name="fragment_del_step1_result_title">发货对象信息如下</string>
    <string name="fragment_del_step1_result_id">授权号:</string>
    <string name="fragment_del_step1_result_name">用户名:</string>
    <string name="fragment_del_step2">你已选择收货人为XXX\n请选择发货商品</string>
    <string name="fragment_del_step3">你已选择发货商品为XX\n请扫描包装大箱NFC标签</string>
    <string name="fragment_del_unit">大箱</string>
    <string name="fragment_del_check">请扫描包装大箱NFC标签验货</string>
    <string name="fragment_del_check_info">本箱货物为XX\n发货人为AA\n收货人为BB</string>
    <string name="fragment_del_check_suggest">请联系总部进行退货处理</string>
    
    <string name="fragment_mgnt_info">请扫描NFC标签查看发货链</string>
    <string name="fragment_mgnt_check_info_title">本商品为XX</string>
    <string name="fragment_mgnt_check_info_id">防伪ID：NNN</string>
    
    <string name="fragment_history_start">开始时间</string>
    <string name="fragment_history_end">结束时间</string>
    <string name="fragment_history_search">查询</string>
    
    <string name="error_nonetwork">无网络连接</string>
    <string name="error_server">无法连接到服务器</string>
    
    <string name="bottombar_text_delivery">发货</string>
    <string name="bottombar_text_check">验货</string>
    <string name="bottombar_text_package">装箱</string>
    <string name="bottombar_text_history">历史</string>

</resources>
