<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/bar_background"
        android:gravity="center|center_horizontal|center_vertical" >

        <ImageView
            android:id="@+id/iv_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="7dp" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text=""
            android:textColor="#639dc5"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/iv_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/ic_user" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_header"
        android:layout_marginTop="70dp"
        android:gravity="center|center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fragment_del_check"
            android:textColor="#000000"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_check_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/fragment_unscan"
            android:textColor="#000000"
            android:textSize="45sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_check_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/fragment_del_check_info"
            android:textColor="#000000"
            android:textSize="19sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>