<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/bar_background"
        android:gravity="center|center_horizontal|center_vertical" >

        <ImageView
            android:id="@+id/iv_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="7dp" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text=""
            android:textColor="#639dc5"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/iv_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/ic_user" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_header"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/tv_start"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginLeft="40dp"
            android:text="@string/fragment_history_start"
            android:textColor="#000000"
            android:textSize="17sp"
            android:textStyle="bold" />

        <DatePicker
            android:id="@+id/dp_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_start"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/tv_end"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginLeft="40dp"
            android:layout_below="@+id/dp_start"
            android:gravity="center"
            android:text="@string/fragment_history_end"
            android:textColor="#000000"
            android:textSize="17sp"
            android:textStyle="bold" />

        <DatePicker
            android:id="@+id/dp_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_end"
            android:layout_centerInParent="true" />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        	android:layout_marginTop="10dp"
            android:layout_below="@+id/dp_end"
            android:text="@string/fragment_history_search"
            android:textColor="#000000"
            android:textSize="19sp"
            android:layout_centerInParent="true" />

    </RelativeLayout>

</RelativeLayout>